################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
description = "Zenoh Rust Transport library implementation of the Eclipse uProtocol"
edition = "2021"
include = ["/src/*", "/examples/*", "/Cargo.toml", "/README.md", "/config/*"]
keywords = ["uProtocol", "SDK", "communication", "Zenoh"]
license = "Apache-2.0"
name = "up-transport-zenoh"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-transport-zenoh-rust"
rust-version = "1.82"
version = "0.6.0"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
bytes = "1.10.1"
# explicitly depend on 0.15.2 to include fix for https://rustsec.org/advisories/RUSTSEC-2024-0402
hashbrown = { version = "0.15.2" }
lazy_static = "1.4.0"
protobuf = { version = "3.7.2" }
# explicitly depend on 0.17.13 to include fix for https://rustsec.org/advisories/RUSTSEC-2025-0009
ring = { version = "0.17.13" }
# explicitly depend on 0.23.18 to include fix for https://rustsec.org/advisories/RUSTSEC-2024-0399
rustls = { version = "0.23.18" }
serde_json = "1.0.128"
tokio = { version = "1.44", default-features = false }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
up-rust = { version = "0.5.0", default-features = false }
url = { version = "2.5.4" }
# [impl->dsn~up-transport-zenoh-protocol-version~1]
zenoh = { version = "1.2.1" }

[dev-dependencies]
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive"] }
test-case = { version = "3.3" }
up-rust = { version = "0.5.0", features = ["communication"] }

[features]
default = []
zenoh-unstable = ["zenoh/unstable", "zenoh/internal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
