################################################################################
# Copyright (c) 2023 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
################################################################################

[package]
description = "Zenoh Rust Transport library implementation of the Eclipse uProtocol"
edition = "2021"
include = ["/src/*", "/examples/*", "/Cargo.toml", "/README.md", "/config/*"]
keywords = ["uProtocol", "SDK", "communication", "Zenoh"]
license = "Apache-2.0"
name = "up-transport-zenoh"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/up-transport-zenoh-rust"
rust-version = "1.85"
version = "0.8.0"

[lints.clippy]
all = "deny"
pedantic = "deny"
#cargo = "deny"
#restriction = "deny"
#nursery = "deny"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
bytes = "1.10.1"
protobuf = { version = "3.7.2" }
tokio = { version = "1.45.1", default-features = false }
tracing = "0.1.40"
up-rust = { version = "0.7.0", default-features = false }
# [impl->dsn~up-transport-zenoh-protocol-version~1]
zenoh = { version = "1.6.2" }

[dev-dependencies]
chrono = "0.4.41"
clap = { version = "4.5.42", features = ["derive"] }
serde_json = "1.0.142"
serial_test = { version = "3.2.0" }
test-case = { version = "3.3" }
tokio = { version = "1.45.1", default-features = false, features = ["rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.19"
up-rust = { version = "0.7.0", features = ["communication", "test-util"] }

[features]
default = []
zenoh-unstable = ["zenoh/unstable", "zenoh/internal"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package.metadata.docs.rs]
all-features = true
